cabal-version:      3.0
name:               huffman-coding
version:            0.1.0.0

author:             Jonathan Strickland
maintainer:         djanatyn@gmail.com

build-type:         Simple
common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Huffman
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   src
    default-language: GHC2021
